fix(SkillsMap): fix line-height layout problems (#563)

--- a/code13/app/client/imports/components/Skills/SkillsMap.less
+++ b/code13/app/client/imports/components/Skills/SkillsMap.less
@@ -34,11 +34,10 @@
       flex-wrap: wrap;
 
       & > .leaf {
-        flex: 1 1 10em;
+        flex: 1 1 15em;
         transition: background 0.2s, opacity 0.2s, color 0.2s;
+        padding: 1em;
         margin: 0.25em;
-        height: @height * 2;
-        line-height: @height * 2;
         text-align: center;
         background: transparent;
         user-select: none;
@@ -88,9 +87,6 @@
         transition: background 0.2s;
         background: rgba(0, 0, 0, 0.05);
         box-shadow: inset -0.5px 0 0 0 #FFF;
-        &:last-child {
-          box-shadow: none;
-        }
       }
     }
   }
